# ckt1031-_-revanced-build-script

./: .gitignore  README.md  main.py  options.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  lint.yml
keystore/: default.keystore
src/: _config.py  apkmirror.py  build.py  downloader.py  logger.py  validation.py
